; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2c.c_I2CIntRegister.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2c.c_I2CIntRegister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @I2CIntRegister(i64 %0, void ()* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca void ()*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store void ()* %1, void ()** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @_I2CBaseValid(i64 %6)
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i64, i64* %3, align 8
  %10 = call i64 @_I2CIntNumberGet(i64 %9)
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  %12 = icmp ne i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  %15 = load i64, i64* %5, align 8
  %16 = load void ()*, void ()** %4, align 8
  %17 = bitcast void ()* %16 to void (...)*
  %18 = call i32 @IntRegister(i64 %15, void (...)* %17)
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @IntEnable(i64 %19)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @_I2CBaseValid(i64) #1

declare dso_local i64 @_I2CIntNumberGet(i64) #1

declare dso_local i32 @IntRegister(i64, void (...)*) #1

declare dso_local i32 @IntEnable(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
